Increment version number

--- a/vignettes/AQoL_Scoring.Rmd
+++ b/vignettes/AQoL_Scoring.Rmd
@@ -44,4 +44,7 @@ As the below summary illustrates, there is little difference in results between 
 summary(comparison_tb)
 ```
 
+```{r}
+# comparison_tb
+```
 
