--- a/vignettes/AQoL_Scoring.Rmd
+++ b/vignettes/AQoL_Scoring.Rmd
@@ -31,10 +31,12 @@ comparison_tb <- aqol_tb %>%
                              aqol6d_from_8d_coeffs_lup_tb = aqol6d_from_8d_coeffs_lup_tb,
                              dim_sclg_constant_lup_tb = dim_sclg_constant_lup_tb,
                              disutilities_lup_tb = disutilities_lup_tb,
-                             itm_wrst_wghts_lup_tb = itm_wrst_wghts_lup_tb)) %>%
+                             itm_wrst_wghts_lup_tb = itm_wrst_wghts_lup_tb),
+                uaqol_adol = calc_adol_aqol6d(aqol_tb, prefix_1L_chr = "aqol",id_var_nm_1L_chr = "v1")) %>%
   dplyr::select(dplyr::starts_with("uaqol")) %>%
   dplyr::mutate(diff_with_8D = uaqol_FB - uaqol6Dusing8D,
-                diff_with_8Da = uaqol_FB - uaqol6Dusing8Da)
+                diff_with_8Da = uaqol_FB - uaqol6Dusing8Da,
+                diff_adol_with_adult = uaqol_adol - uaqol_FB)
 comparison_tb
 ```
 
@@ -45,6 +47,20 @@ summary(comparison_tb)
 ```
 
 ```{r}
-# comparison_tb
+# Check that it  missing data
+aqol_with_missing_tb <- purrr::map_df(aqol_tb, function(x) {x[sample(c(TRUE, NA), prob = c(0.8, 0.2), size = length(x), replace = TRUE)]})
+comparison_tb <- aqol_tb %>%
+  dplyr::mutate(uaqol_FB = calculate_aqol6dU_dbl(aqol6d_items_tb = aqol_tb,
+                             prefix_1L_chr =  "aqol",
+                             aqol6d_from_8d_coeffs_lup_tb = aqol6d_from_8d_coeffs_lup_tb,
+                             dim_sclg_constant_lup_tb = dim_sclg_constant_lup_tb,
+                             disutilities_lup_tb = disutilities_lup_tb,
+                             itm_wrst_wghts_lup_tb = itm_wrst_wghts_lup_tb),
+                uaqol_adol = calc_adol_aqol6d(aqol_tb, prefix_1L_chr = "aqol",id_var_nm_1L_chr = "v1")) %>%
+  dplyr::select(-uaqol_FB,
+                - uaqol6Dusing8D,
+                - uaqol6Dusing8Da)
+#comparison_tb
+summary(comparison_tb)
 ```
 
