--- a/vignettes/AQoL_Scoring.Rmd
+++ b/vignettes/AQoL_Scoring.Rmd
@@ -32,7 +32,7 @@ comparison_tb <- aqol_tb %>%
                              prefix_1L_chr =  "aqol",
                              aqol6d_from_8d_coeffs_lup_tb = FBaqol::aqol6d_from_8d_coeffs_lup_tb,
                              dim_sclg_constant_lup_tb = FBaqol::dim_sclg_constant_lup_tb,
-                             disutilities_lup_tb = FBaqol::disutilities_lup_tb,
+                             disvalues_lup_tb = FBaqol::disvalues_lup_tb,
                              itm_wrst_wghts_lup_tb = FBaqol::itm_wrst_wghts_lup_tb),
                 uaqol_adol = FBaqol::calculate_adol_aqol6d(aqol_tb, prefix_1L_chr = "aqol",id_var_nm_1L_chr = "v1")) %>%
   dplyr::select(dplyr::starts_with("uaqol")) %>%
