--- a/vignettes/Child_RMDs/_AQoL_6D_Syn_Pop.Rmd
+++ b/vignettes/Child_RMDs/_AQoL_6D_Syn_Pop.Rmd
@@ -12,9 +12,72 @@ devtools::load_all()
 ```
 
 ```{r}
+make_aqol_items_props_tbs_ls <- function(){
+  bl_answer_props_tb <- tibble::tribble(
+    ~Question, ~Answer_1, ~Answer_2, ~Answer_3, ~Answer_4, ~Answer_5, ~Answer_6,
+
+    "Q1", 0.35, 0.38, 0.16, 0.03, 100, NA_real_, # Check item 5 in real data.
+    "Q2", 0.28, 0.38, 0.18, 0.08, 0.04,100,
+    "Q3", 0.78, 0.18, 0.03, 0.01, 0.0, 100,
+    "Q4", 0.64, 0.23, 0.09, 0.0, 100, NA_real_,
+    "Q5", 0.3, 0.48, 0.12, 0.05, 100, NA_real_,
+    "Q6", 0.33, 0.48, 0.15, 100, NA_real_,NA_real_,
+    "Q7", 0.44, 0.27, 0.11, 100, NA_real_, NA_real_,
+    "Q8", 0.18, 0.29, 0.23, 0.21, 100, NA_real_,
+    "Q9", 0.07, 0.27, 0.19, 0.37, 100, NA_real_,
+    "Q10", 0.04, 0.15, 0.4, 0.25, 100, NA_real_,
+    "Q11", 0.03, 0.13, 0.52, 0.25, 100, NA_real_,
+    "Q12", 0.06, 0.21, 0.25, 0.34, 100, NA_real_,
+    "Q13", 0.05, 0.25, 0.31, 0.28, 100, NA_real_,
+    "Q14", 0.05, 0.3, 0.34, 0.25, 100, NA_real_,
+    "Q15", 0.57, 0.25, 0.12, 100, NA_real_,NA_real_,
+    "Q16", 0.48, 0.42, 0.06, 100, NA_real_, NA_real_,
+    "Q17", 0.44, 0.3, 0.16, 0.07, 100, NA_real_,
+    "Q18", 0.33, 0.38, 0.25, 0.04, 0.0, 100,
+    "Q19", 0.33, 0.49, 0.16, 0.02, 0.0, 100,
+    "Q20", 0.67, 0.21, 0.02, 100, NA_real_,NA_real_
+  ) %>%
+    dplyr::mutate(total_prop_dbl = rowSums(dplyr::select(.,-Question),na.rm = T) -100) %>%
+    dplyr::mutate_if(is.numeric,~purrr::map2_dbl(.,total_prop_dbl,~ifelse(.x==100,1-.y,.x))) %>%
+    dplyr::select(-total_prop_dbl)
+  fup_answer_props_tb <- tibble::tribble(
+    ~Question, ~Answer_1, ~Answer_2, ~Answer_3, ~Answer_4, ~Answer_5, ~Answer_6,
+
+    "Q1", 0.51, 0.33, 0.12, 0.02, 100, NA_real_,
+    "Q2", 0.36, 0.38, 0.16, 0.06, 0.02,100,
+    "Q3", 0.81, 0.15, 0.04, 0.00, 0.0, 100,
+    "Q4", 0.73, 0.18, 0.09, 0.0, 100, NA_real_,
+    "Q5", 0.36, 0.42, 0.12, 0.05, 100, NA_real_,
+    "Q6", 0.48, 0.40, 0.11, 100, NA_real_,NA_real_,
+    "Q7", 0.57, 0.25, 0.09, 100, NA_real_, NA_real_,
+    "Q8", 0.31, 0.33, 0.17, 0.12, 100, NA_real_,
+    "Q9", 0.13, 0.35, 0.19, 0.23, 100, NA_real_,
+    "Q10", 0.1, 0.21, 0.43, 0.16, 100, NA_real_,
+    "Q11", 0.06, 0.25, 0.48, 0.18, 100, NA_real_,
+    "Q12", 0.08, 0.27, 0.26, 0.25, 100, NA_real_,
+    "Q13", 0.07, 0.37, 0.31, 0.19, 100, NA_real_,
+    "Q14", 0.08, 0.37, 0.34, 0.15, 100, NA_real_,
+    "Q15", 0.62, 0.23, 0.09, 100, NA_real_,NA_real_,
+    "Q16", 0.52, 0.40, 0.06, 100, NA_real_, NA_real_,
+    "Q17", 0.51, 0.28, 0.15, 0.06, 100, NA_real_,
+    "Q18", 0.37, 0.35, 0.25, 0.03, 0.0, 100,
+    "Q19", 0.43, 0.40, 0.16, 0.01, 0.0, 100,
+    "Q20", 0.77, 0.21, 0.02, 100, NA_real_,NA_real_
+  ) %>%
+    dplyr::mutate(total_prop_dbl = rowSums(dplyr::select(.,-Question),na.rm = T) -100) %>%
+    dplyr::mutate_if(is.numeric,~purrr::map2_dbl(.,total_prop_dbl,~ifelse(.x==100,1-.y,.x))) %>%
+    dplyr::select(-total_prop_dbl)
+  aqol_items_props_tbs_ls <- list(bl_answer_props_tb,
+                                  fup_answer_props_tb)
+  return(aqol_items_props_tbs_ls)
+}
+aqol_items_props_tbs_ls <- make_aqol_items_props_tbs_ls()
+```
+
+```{r}
 corr_mat_ls <- list(matrix(c(1,-0.78,0.72,-0.67,-0.71,-0.65,-0.67,
                                NA,1,-0.73,0.69,0.66,0.63,0.71,
-                               NA,NA,1,-.057,-0.64,-0.57,-0.65,
+                               NA,NA,1,-.57,-0.64,-0.57,-0.65,
                                NA,NA,NA,1,0.74,0.70,0.63,
                                NA,NA,NA,NA,1,0.7,0.59,
                                NA,NA,NA,NA,NA,1,0.55,
@@ -39,11 +102,14 @@ synth_data_spine_ls <- list(corr_mat_ls = corr_mat_ls,
 discrete_lgl = c(F,rep(T,6)),
 var_names_chr = c("aqol6d_total_w","phq9_total","bads_total","gad7_total",
                      "oasis_total","scared_total","k6_total")) 
+aqol_scores_pars_ls <- list(means_dbl = c(44.5,40.6), 
+                           sds_dbl = c(9.9,9.8),
+                           corr_dbl = -0.95)
 ```
 
 ```{r}
 write_results_csv(synth_data_spine_ls,
-                  output_dir_1L_chr = "../Data") # Change detination
+                  output_dir_1L_chr = "../Data") # Change destination
 ```
 
 ```{r}
@@ -53,9 +119,11 @@ tbs_ls <- make_synth_series_tbs_ls(synth_data_spine_ls, series_names_chr = c("bl
 
 ```{r}
 tbs_ls <- add_corrs_and_uts_to_tbs_ls_ls(tbs_ls,
-                               temporal_corrs_ls = list(aqol6d_total_w = 0.85,
-                          aqol_scores = 0.9), 
-prefix_chr = c(uid = "Participant_",aqol_item = "aqol6d_q"))
+                                         aqol_scores_pars_ls = aqol_scores_pars_ls,
+                                         aqol_items_props_tbs_ls = aqol_items_props_tbs_ls,
+                                         temporal_corrs_ls = list(aqol6d_total_w = 0.85,
+                                                                  aqol_scores = 0.9), 
+                                         prefix_chr = c(uid = "Participant_",aqol_item = "aqol6d_q"))
 
 ```
 
