--- a/vignettes/AQoL_Scoring.Rmd
+++ b/vignettes/AQoL_Scoring.Rmd
@@ -10,6 +10,7 @@ output:
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 library(magrittr)
+library(FBaqol)
 # devtools::load_all()
 ```
 
