--- a/vignettes/Child_RMDs/_AQoL_6D_Xtras.Rmd
+++ b/vignettes/Child_RMDs/_AQoL_6D_Xtras.Rmd
@@ -191,88 +191,88 @@ summary_table$`MAE.prediction`[n]=mean(MAEP)
 ## GLM (Binomial with log link)
 
 ```{r}
-# library(ggfortify)
-# fit = glm( aqol6d_total_w  ~ PHQ9, data = baseline,family=quasibinomial(log))
-# summary(fit)
-# 
-# newdata <- data.frame(PHQ9=0:27)
-# newdata$aqol6d_total_w=predict(fit,newdata=newdata,type="response")
-#  
-# ggplot2::ggplot(baseline,ggplot2::aes(x = PHQ9, y= aqol6d_total_w )) +
-#   ggplot2::geom_point() + 
-#   ggplot2::geom_smooth(method = "loess", size = 1.5) +
-#   ggplot2::geom_line(data=newdata,ggplot2::aes(x = PHQ9, y= aqol6d_total_w),col="red")  +
-#   ggplot2::theme_bw() + ggplot2::labs(x="PHQ9 total score",y="AQoL-6D utility score")
-# 
-# ggplot2::autoplot(fit, which = 1:6, ncol = 3, label.size = 3)
-# 
-# baseline %>% 
-#     dplyr::mutate(Predicted=predict(fit,type="response"), 
-#          Original=aqol6d_total_w) %>%  
-#     tidyr::gather(variable, value, Predicted, Original) %>%
-#     ggplot2::ggplot(ggplot2::aes(x = value, fill = variable)) +
-#     ggplot2::geom_bkde(alpha=0.5) +
-#     ggplot2::geom_rug() +
-#     viridis::scale_fill_viridis( discrete = TRUE) +
-#     ggplot2::theme_bw() +
-#     theme(legend.position="bottom") +
-#     ggplot2::labs( x="AQoL-6D utility score",fill="") 
-# 
-#  
-# baseline %>% 
-#     dplyr::mutate(Simulated=exp(predict(fit)+rnorm(n(),0,sigma(fit))), 
-#          Original=aqol6d_total_w) %>%  
-#     tidyr::gather(variable, value, Simulated, Original) %>%
-#     ggplot2::ggplot(aes(x = value, fill = variable)) +
-#     ggalt::geom_bkde(alpha=0.5) +
-#     ggplot2::geom_rug() +
-#     viridis::scale_fill_viridis( discrete = TRUE) +
-#     ggplot2::theme_bw() +
-#     ggplot2::theme(legend.position="bottom") +
-#     ggplot2::labs( x="AQoL-6D utility score",fill="") 
-# 
-# 
-# baseline %>% 
-#      dplyr::mutate(Predicted=predict(fit,type="response"), 
-#          Original=aqol6d_total_w) %>% 
-#   ggplot2::ggplot(aes(x = Original, y=Predicted)) +
-#   ggplot2::geom_point() + 
-#   ggplot2::geom_smooth(method = "loess", size = 1.5) +
-#   ggplot2::theme_bw() +
-#   ggplot2::geom_abline(intercept = 0, slope = 1, color="red", 
-#                  linetype="dashed", size=1.5) +
-#   ggplot2::xlim(0, 1) + ggplot2::ylim(0, 1) 
-# 
-# 
-# 
-# Rsquared<-NA 
-# RMSE<-NA 
-# MAE<-NA 
-# RsquaredP<-NA 
-# RMSEP<-NA 
-# MAEP<-NA 
-# for (i in 1:10) {
-#   fit = glm(aqol6d_total_w ~ PHQ9, data = baseline[-folds_10[[i]],],family=quasibinomial(log))
-#   pred <- predict(fit,type="response")
-#   Rsquared[i] = caret::R2(pred, baseline[-folds_10[[i]],]$aqol6d_total_w, form = "traditional")
-#   RMSE[i] = caret::RMSE(pred, baseline[-folds_10[[i]],]$aqol6d_total_w)
-#   MAE[i] = caret::MAE(pred, baseline[-folds_10[[i]],]$aqol6d_total_w)
-#   pred <- predict(fit,newdata=baseline[folds_10[[i]],],type="response")
-#   RsquaredP[i] = caret::R2(pred, baseline[folds_10[[i]],]$aqol6d_total_w, form = "traditional")
-#   RMSEP[i] = caret::RMSE(pred, baseline[folds_10[[i]],]$aqol6d_total_w)
-#   MAEP[i] = caret::MAE(pred, baseline[folds_10[[i]],]$aqol6d_total_w)
-# } 
-# 
-# 
-# n=n+1
-# #save model fit
-# summary_table[n,1]="GLM (Binomial with log link)" 
-# summary_table$Rsquare[n]= mean(Rsquared)
-# summary_table$RMSE[n]= mean(RMSE)
-# summary_table$MAE[n]=mean(MAE)
-# summary_table$`Rsquare.prediction`[n]=mean(RsquaredP)
-# summary_table$`RMSE.prediction`[n]=mean(RMSEP)
-# summary_table$`MAE.prediction`[n]=mean(MAEP)
+library(ggfortify)
+fit = glm( aqol6d_total_w  ~ PHQ9, data = baseline,family=quasibinomial(log))
+summary(fit)
+
+newdata <- data.frame(PHQ9=0:27)
+newdata$aqol6d_total_w=predict(fit,newdata=newdata,type="response")
+
+ggplot2::ggplot(baseline,ggplot2::aes(x = PHQ9, y= aqol6d_total_w )) +
+  ggplot2::geom_point() +
+  ggplot2::geom_smooth(method = "loess", size = 1.5) +
+  ggplot2::geom_line(data=newdata,ggplot2::aes(x = PHQ9, y= aqol6d_total_w),col="red")  +
+  ggplot2::theme_bw() + ggplot2::labs(x="PHQ9 total score",y="AQoL-6D utility score")
+
+ggplot2::autoplot(fit, which = 1:6, ncol = 3, label.size = 3)
+
+baseline %>%
+    dplyr::mutate(Predicted=predict(fit,type="response"),
+         Original=aqol6d_total_w) %>%
+    tidyr::gather(variable, value, Predicted, Original) %>%
+    ggplot2::ggplot(ggplot2::aes(x = value, fill = variable)) +
+    ggalt::geom_bkde(alpha=0.5) +
+    ggplot2::geom_rug() +
+    viridis::scale_fill_viridis( discrete = TRUE) +
+    ggplot2::theme_bw() +
+    theme(legend.position="bottom") +
+    ggplot2::labs( x="AQoL-6D utility score",fill="")
+
+
+baseline %>%
+    dplyr::mutate(Simulated=exp(predict(fit)+rnorm(dplyr::n(),0,sigma(fit))),
+         Original=aqol6d_total_w) %>%
+    tidyr::gather(variable, value, Simulated, Original) %>%
+    ggplot2::ggplot(aes(x = value, fill = variable)) +
+    ggalt::geom_bkde(alpha=0.5) +
+    ggplot2::geom_rug() +
+    viridis::scale_fill_viridis( discrete = TRUE) +
+    ggplot2::theme_bw() +
+    ggplot2::theme(legend.position="bottom") +
+    ggplot2::labs( x="AQoL-6D utility score",fill="")
+
+
+baseline %>%
+     dplyr::mutate(Predicted=predict(fit,type="response"),
+         Original=aqol6d_total_w) %>%
+  ggplot2::ggplot(aes(x = Original, y=Predicted)) +
+  ggplot2::geom_point() +
+  ggplot2::geom_smooth(method = "loess", size = 1.5) +
+  ggplot2::theme_bw() +
+  ggplot2::geom_abline(intercept = 0, slope = 1, color="red",
+                 linetype="dashed", size=1.5) +
+  ggplot2::xlim(0, 1) + ggplot2::ylim(0, 1)
+
+
+
+Rsquared<-NA
+RMSE<-NA
+MAE<-NA
+RsquaredP<-NA
+RMSEP<-NA
+MAEP<-NA
+for (i in 1:10) {
+  fit = glm(aqol6d_total_w ~ PHQ9, data = baseline[-folds_10[[i]],],family=quasibinomial(log))
+  pred <- predict(fit,type="response")
+  Rsquared[i] = caret::R2(pred, baseline[-folds_10[[i]],]$aqol6d_total_w, form = "traditional")
+  RMSE[i] = caret::RMSE(pred, baseline[-folds_10[[i]],]$aqol6d_total_w)
+  MAE[i] = caret::MAE(pred, baseline[-folds_10[[i]],]$aqol6d_total_w)
+  pred <- predict(fit,newdata=baseline[folds_10[[i]],],type="response")
+  RsquaredP[i] = caret::R2(pred, baseline[folds_10[[i]],]$aqol6d_total_w, form = "traditional")
+  RMSEP[i] = caret::RMSE(pred, baseline[folds_10[[i]],]$aqol6d_total_w)
+  MAEP[i] = caret::MAE(pred, baseline[folds_10[[i]],]$aqol6d_total_w)
+}
+
+
+n=n+1
+#save model fit
+summary_table[n,1]="GLM (Binomial with log link)"
+summary_table$Rsquare[n]= mean(Rsquared)
+summary_table$RMSE[n]= mean(RMSE)
+summary_table$MAE[n]=mean(MAE)
+summary_table$`Rsquare.prediction`[n]=mean(RsquaredP)
+summary_table$`RMSE.prediction`[n]=mean(RMSEP)
+summary_table$`MAE.prediction`[n]=mean(MAEP)
 
 
 ``` 
@@ -312,7 +312,7 @@ baseline %>%
 
  
 baseline %>% 
-    mutate(Simulated=inv.logit(predict(fit)+rnorm(dplyr::n(),0,sigma(fit))), 
+    dplyr::mutate(Simulated=inv.logit(predict(fit)+rnorm(dplyr::n(),0,sigma(fit))), 
          Original=aqol6d_total_w) %>%  
     tidyr::gather(variable, value, Simulated, Original) %>%
     ggplot(aes(x = value, fill = variable)) +
@@ -325,7 +325,7 @@ baseline %>%
 
 
 baseline %>% 
-     mutate(Predicted=predict(fit,type="response"), 
+     dplyr::mutate(Predicted=predict(fit,type="response"), 
          Original=aqol6d_total_w) %>% 
   ggplot(aes(x = Original, y=Predicted)) +
   geom_point() + 
