--- a/vignettes/AQoL_6D_Syn_Pop.Rmd
+++ b/vignettes/AQoL_6D_Syn_Pop.Rmd
@@ -10,6 +10,9 @@ library("magrittr")
 #library("FBaqol")
 library(FBaqol)
 ```
+# Introduction
+The workflow illustrated in this vignette outlines steps to generate a purely synthetic (i.e. fake - no trace of any real records) population and is appropriate for when you do not have access to original dataset whose properties you wish your fake data to represent. A different (and simpler) workflow can be implemented when you do have access to the source dataset. Instead of direct access to the original dataset, it is assumed that you have at least some summary data (e.g. means and standard deviations of variables, correlation matrices). Where you do not have all required summary data, you can use assumptions. The more comprehensive the summary data available to you (and the less assumptions you use), the more realistic will be your representation of the original data.
+
 
 # Specify parameters to generate outcome fake data
 The first set of input data are the proportions for each allowed response for each of the twenty AQOL-6D questions at both baseline and followup.
@@ -101,6 +104,7 @@ aqol_scores_pars_ls <- list(means_dbl = c(44.5,40.6),
                            corr_dbl = -0.95)
 ```
 Next we write a copy of these input parameters as CSV files.
+
 ```{r}
 write_results_csv(synth_data_spine_ls,
                   output_dir_1L_chr = "../Data") # Change destination
@@ -111,11 +115,7 @@ id_var_nm_1L_chr <- "fkClientID"
 item_pfx_1L_chr <- "aqol6d_q"
 domain_pfx_1L_chr <-"aqol6d_subtotal_w_"
 
-domains_chr <- domain_qs_tb$Domain_chr %>% unique()
-q_nbrs_ls <- purrr::map(domains_chr,
-                        ~ domain_qs_tb %>%
-                          dplyr::filter(Domain_chr == .x) %>%
-                          dplyr::pull(Question_dbl))
+
 tbs_ls <- make_synth_series_tbs_ls(synth_data_spine_ls, 
                                    series_names_chr = c("bl_part_1_tb","fup_part_1_tb")) %>%
   add_corrs_and_uts_to_tbs_ls_ls(aqol_scores_pars_ls = aqol_scores_pars_ls,
@@ -125,8 +125,10 @@ tbs_ls <- make_synth_series_tbs_ls(synth_data_spine_ls,
                                  prefix_chr = c(uid = "Participant_",
                                                 aqol_item = item_pfx_1L_chr),
                                  aqol_tots_var_nms_chr = synth_data_spine_ls$aqol_tots_var_nms_chr,
-                                 id_var_nm_1L_chr = id_var_nm_1L_chr) %>% purrr::map(~make_domain_items_ls(domains_chr = c("IL", "Rel", "MH", "COP","P", "SEN"),
-                     q_nbrs_ls = list(1:4,5:7,8:11,12:14,15:17,18:20),
+                                 id_var_nm_1L_chr = id_var_nm_1L_chr) %>% 
+  purrr::map(~make_domain_items_ls(domain_qs_lup_tb = FBaqol::domain_qs_lup_tb,
+    # domains_chr = c("IL", "Rel", "MH", "COP","P", "SEN"),
+    #                  q_nbrs_ls = list(1:4,5:7,8:11,12:14,15:17,18:20),
 item_pfx_1L_chr = item_pfx_1L_chr) %>%
   add_domain_unwtd_tots_tb(items_tb = .x,
                            domain_pfx_1L_chr = domain_pfx_1L_chr) %>%
