--- a/vignettes/Child_RMDs/_AQoL_6D_Items_XTRAs.Rmd
+++ b/vignettes/Child_RMDs/_AQoL_6D_Items_XTRAs.Rmd
@@ -37,17 +37,17 @@ for(i in colNames){
 }
 ## FIX NEEDED BEFORE BELOW CAN RUN
 # extract legend
-# legend <- ggplot2::ggplot(aqol6d_tb, ggplot2::aes_string(targetvar)) +
-#          ggplot2::geom_histogram(bins=8,color = "white",ggplot2::aes(fill=round),position = 'dodge',alpha=0.7) +
-#           ggplot2::labs(x=labelx, y="Percentage", fill = "Data collection")  +
-#           ggplot2::theme_bw() +
-#           ggplot2::theme(legend.position="bottom") +
-#           ggplot2::scale_y_continuous(labels = scales::percent) +
-#           ggplot2::scale_fill_manual(values=c("#de2d26","#fc9272")) 
-# 
-# legend <- extract_guide_box_lgd(legend)
-# gridExtra::grid.arrange(ggpubr::ggarrange(plotlist=plot,nrow=3,ncol=2) ,
-#              legend, nrow=2,heights=c(10, 1))  
+legend <- ggplot2::ggplot(aqol6d_tb, ggplot2::aes_string(targetvar)) +
+         ggplot2::geom_histogram(bins=8,color = "white",ggplot2::aes(fill=round),position = 'dodge',alpha=0.7) +
+          ggplot2::labs(x=labelx, y="Percentage", fill = "Data collection")  +
+          ggplot2::theme_bw() +
+          ggplot2::theme(legend.position="bottom") +
+          ggplot2::scale_y_continuous(labels = scales::percent) +
+          ggplot2::scale_fill_manual(values=c("#de2d26","#fc9272"))
+
+legend <- extract_guide_box_lgd(legend)
+gridExtra::grid.arrange(ggpubr::ggarrange(plotlist=plot,nrow=3,ncol=2) ,
+             legend, nrow=2,heights=c(10, 1))
 
 ```
 
