--- a/vignettes/Child_RMDs/_AQoL_6D_Items_XTRAs.Rmd
+++ b/vignettes/Child_RMDs/_AQoL_6D_Items_XTRAs.Rmd
@@ -23,7 +23,9 @@ for(i in colNames){
           dplyr::mutate(!!targetvar :=ifelse(!!as.name(i)==1,log(-log(1-0.999)),!!as.name(targetvar )))
     #extract label  
     labelx<-eval(parse(text=paste0("attributes(aqol6d_tb$",i,")$label")))
-    labelx<- paste0("log-log transformed", stringr::str_to_sentence(stringr::str_sub(labelx,38,55))
+    labelx<- paste0("log-log transformed ", 
+                    stringr::str_to_sentence(labelx,#stringr::str_sub(labelx,38,55)
+                                             )
                     )
     #plot
     plot[[i]]<- ggplot2::ggplot(aqol6d_tb, ggplot2::aes_string(targetvar)) +
@@ -35,9 +37,6 @@ for(i in colNames){
           ggplot2::scale_fill_manual(values=c("#de2d26","#fc9272")) 
       
 }
-# Above needs additional transformation to work. Currently attempting to log negatives.
-# Have commented out last lines until this is fixed.
-# extract legend
 legend <- ggplot2::ggplot(aqol6d_tb, ggplot2::aes_string(targetvar)) +
          ggplot2::geom_histogram(bins=8,color = "white",ggplot2::aes(fill=round),position = 'dodge',alpha=0.7) +
           ggplot2::labs(x=labelx, y="Percentage", fill = "Data collection")  +
@@ -46,9 +45,9 @@ legend <- ggplot2::ggplot(aqol6d_tb, ggplot2::aes_string(targetvar)) +
           ggplot2::scale_y_continuous(labels = scales::percent) +
           ggplot2::scale_fill_manual(values=c("#de2d26","#fc9272"))
 
-# legend <- extract_guide_box_lgd(legend)
-# gridExtra::grid.arrange(ggpubr::ggarrange(plotlist=plot,nrow=3,ncol=2) ,
-#              legend, nrow=2,heights=c(10, 1))
+legend <- extract_guide_box_lgd(legend)
+gridExtra::grid.arrange(ggpubr::ggarrange(plotlist=plot,nrow=3,ncol=2) ,
+             legend, nrow=2,heights=c(10, 1))
 
 ```
 
