--- a/vignettes/AQoL_6D_Syn_Pop.Rmd
+++ b/vignettes/AQoL_6D_Syn_Pop.Rmd
@@ -183,7 +183,15 @@ descriptives_BL_tb <- tibble::tibble(fkClientID = aqol6d_adol_pop_tbs_ls$bl_outc
                        d_ATSI = NA_character_,
                        d_english_home = NA, 
                        d_english_native = NA, 
-                       d_relation_s = NA_character_)
+                       d_relation_s = c(rep(1,325),
+                                  rep(2,426),
+                                  rep(3,286),
+                                  rep(NA_real_,31)) %>% scramble_xx() %>%
+                         factor(labels = c("REPLACE_ME_1","REPLACE_ME_2","REPLACE_ME_3"))) %>%
+  dplyr::mutate(d_sex_birth_s = dplyr::case_when(as.integer(d_gender) %in% c(1L,2L) & runif(1068)>0.995 ~ as.integer(d_gender) %>% purrr::map_int(~switch(as.integer(.x),2L,1L)),
+                                                 #d_gender ==3 ~ 1,
+                                                 TRUE ~ as.integer(d_gender)
+                ))
 descriptives_FUP_tb <- descriptives_BL_tb %>% 
   dplyr::filter(fkClientID %in% aqol6d_adol_pop_tbs_ls$fup_outcomes_tb$fkClientID) %>%
   dplyr::mutate(round = 2,
