--- a/vignettes/Child_RMDs/_AQoL_6D_Linear.Rmd
+++ b/vignettes/Child_RMDs/_AQoL_6D_Linear.Rmd
@@ -10,21 +10,20 @@ output: html_document
 
 
 ```{r}
-summary_table<-data.frame("Model"=NA,"Rsquare"=NA,"RMSE"=NA, "MAE"=NA, "Rsquare.prediction"=NA, "RMSE prediction"=NA,"MAE prediction"=NA)
+summary_table <- data.frame("Model"=NA,"Rsquare"=NA,"RMSE"=NA, "MAE"=NA, "Rsquare.prediction"=NA, "RMSE prediction"=NA,"MAE prediction"=NA)
 
-library(ggfortify)
+#library(ggfortify)
 fit = lm(aqol6d_total_w ~ PHQ9, data = baseline)
 summary(fit)
 
-
-newdata<-data.frame(PHQ9=0:27)
+newdata <- data.frame(PHQ9=0:27)
 newdata$aqol6d_total_w=predict(fit,newdata=newdata)
  
-ggplot(baseline,aes(x = PHQ9, y= aqol6d_total_w )) +
-  geom_point() + 
-  geom_smooth(method = "loess", size = 1.5) +
-  geom_line(data=newdata,aes(x = PHQ9, y= aqol6d_total_w),col="red")  +
-  theme_bw() + labs(x="PHQ9 total score",y="AQoL-6D utility score")
+ggplot2::ggplot(baseline,ggplot2::aes(x = PHQ9, y= aqol6d_total_w )) +
+  ggplot2::geom_point() + 
+  ggplot2::geom_smooth(method = "loess", size = 1.5) +
+  ggplot2::geom_line(data=newdata,ggplot2::aes(x = PHQ9, y= aqol6d_total_w),col="red")  +
+  ggplot2::theme_bw() + ggplot2::labs(x="PHQ9 total score",y="AQoL-6D utility score")
 
 ggplot2::autoplot(fit, which = 1:6, ncol = 3, label.size = 3)
 
@@ -33,19 +32,19 @@ baseline %>%
     dplyr::mutate(Predicted=predict(fit),
          Original=aqol6d_total_w) %>% 
     tidyr::gather(variable, value, Predicted, Original) %>%
-    ggplot2::ggplot(aes(x = value, fill = variable)) +
+    ggplot2::ggplot(ggplot2::aes(x = value, fill = variable)) +
     ggalt::geom_bkde(alpha=0.5) +
     ggplot2::geom_rug() +
     viridis::scale_fill_viridis( discrete = TRUE) +
     ggplot2::theme_bw() +
     ggplot2::theme(legend.position="bottom") +
-    ggplot2::labs( x="AQoL-6D utility score",fill="")
+    ggplot2::labs(x="AQoL-6D utility score",fill="")
 
 baseline %>% 
     dplyr::mutate(Simulated=simulate(fit)$sim_1, 
          Original=aqol6d_total_w) %>% 
     tidyr::gather(variable, value, Simulated, Original) %>%
-    ggplot2::ggplot(aes(x = value, fill = variable)) +
+    ggplot2::ggplot(ggplot2::aes(x = value, fill = variable)) +
     ggalt::geom_bkde(alpha=0.5) +
     ggplot2::geom_rug() +
     viridis::scale_fill_viridis( discrete = TRUE) +
@@ -56,13 +55,13 @@ baseline %>%
 baseline %>% 
   dplyr::mutate(Predicted=predict(fit),
          Original=aqol6d_total_w) %>% 
-  ggplot2::ggplot(aes(x = Original, y=Predicted)) +
+  ggplot2::ggplot(ggplot2::aes(x = Original, y=Predicted)) +
   ggplot2::geom_point() + 
   ggplot2::geom_smooth(method = "loess", size = 1.5) +
   ggplot2::theme_bw() +
   ggplot2::geom_abline(intercept = 0, slope = 1, color="red", 
                  linetype="dashed", size=1.5) +
-  xlim(0, 1) + ylim(0, 1)
+  ggplot2::xlim(0, 1) + ggplot2::ylim(0, 1)
 
 
 Rsquared<-NA
